# commensa-audit

./: .gitignore  BUILD_LOG.md  COMMIT_MODE_SPEC.md  HANDOFF_MARKER_HARDENING.md  LICENSE  PICKUP.md  README.md  SPEC.md  pyproject.toml
commensa_audit/: __init__.py  classify.py  cli.py  engine.py  markers.py  patches.py  report.py  rework.py  units.py
commensa_audit/extractors/: __init__.py  github.py  local_clone.py
quality/: audit_commensa-audit.json  audit_order-sheet-web-v2.json  gateB_eval_output.txt  gateB_spotcheck.md  gateD_A_eval.py  gateD_B_eval.py  gateM_A_eval.py  gate_b_eval.py  report_commensa-audit_2026-06-10.html  report_order-sheet-web-v2_2026-06-09.html  report_order-sheet-web-v2_2026-06-10.html
reference/: LABEL_THESE.csv  RESULTS_pilot1.md  commensa_validate.py  inversion_test.py  orderwebv2_units.csv
reviews/: gateA_redteam.md  gateB_redteam.md  gateC_redteam.md
sweep/: cohort_enrich.json  cohort_enrich.py  cohort_select.py  exclusion_log.json  marker_refresh.py  marker_rerun_analysis.py  model_durability.py  repo_list.json  sweep_run.py
tests/: test_extract_limits.py  test_local_clone.py  test_markers_commitmode.py  test_phase_b.py  test_phase_c.py  test_v11.py
